--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"ethers": "^6.13.2",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"ipfs-http-client": "^60.0.1",
 		"next": "^14.2.5",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
