--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"@react-aria/visually-hidden": "3.8.12",
 		"@web3modal/ethers": "^5.0.11",
 		"clsx": "2.1.1",
+		"dotenv": "^16.4.5",
 		"ethers": "^6.13.2",
+		"firebase": "^10.13.0",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"ipfs-http-client": "^60.0.1",
